<resources>
    <string name="app_name">AndroidScavengerHunt</string>
    <string name="feedCreateGameButtonTitle">create a game</string>
    <string name="action_settings">Settings</string>
    <string name="settings_fragment_label" />
    <string name="back">back</string>
    <string name="main_fragment_label">Settings</string>

    <string name="title_activity_scavenger_hunt">ScavengerHuntActivity</string>
    <string name="messages">Messages</string>
    <string name="location_list">Location List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_create_game">createGameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_create_game_plot_locations">createGamePlotLocationsActivity
    </string>
    <string name="name_error_game_list">By: N/A</string>
    <string name="randomize_locations_btn">Randomize Locations</string>
    <string name="add_scavenger_location_btn">Add Scavenger Location</string>
    <string name="number_of_players_txt">Number of Players</string>
    <string name="enter_the_title_edit">Enter the title</string>
    <string name="confirm_btn">Confirm</string>
    <string name="title_txt">Title</string>
    <string name="create_game_txt">Create Game</string>
    <string name="play_game_btn">Play Game</string>
    <string name="chat_fragment_label">Game Chat</string>
    <string name="map_fragment_label">Map</string>
</resources>