<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGameActivity"
    android:padding="8dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game_txt"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/createGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/markerRecyclerView" />


    <TextView
        android:id="@+id/createGameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_txt"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/createGameNumPlayersTextView"
        app:layout_constraintEnd_toStartOf="@+id/createGameTitleEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/createGameTitleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/enter_the_title_edit"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/createGameTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createGameTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/createGameTitleTextView"
        app:layout_constraintVertical_bias="0.347" />

    <TextView
        android:id="@+id/createGameNumPlayersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/number_of_players_txt"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/randomMarkers"
        app:layout_constraintEnd_toStartOf="@+id/createGameNumPlayersEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createGameTitleTextView" />

    <EditText
        android:id="@+id/createGameNumPlayersEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="Enter the Number of Players"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/createGameNumPlayersTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createGameNumPlayersTextView"
        app:layout_constraintTop_toTopOf="@+id/createGameNumPlayersTextView" />

    <Button
        android:id="@+id/addScavLocMapButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="@string/add_scavenger_location_btn"
        app:layout_constraintBottom_toBottomOf="@+id/randomMarkers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/randomMarkers"
        app:layout_constraintTop_toTopOf="@+id/randomMarkers"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/markerRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/createGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomMarkers" />

    <Button
        android:id="@+id/randomMarkers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="11dp"
        android:text="@string/randomize_locations_btn"
        app:layout_constraintEnd_toStartOf="@+id/addScavLocMapButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createGameNumPlayersTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>